--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <header>
+      ''
       <div class="navbar">
         <div class="logo">PainfulPleasures</div>
         <div class="hamburger-menu" id="hamburger-menu">
@@ -168,6 +169,15 @@
           const navLinks = document.getElementById("nav-links");
           navLinks.classList.toggle("active");
         });
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const hamburgerMenu = document.querySelector(".hamburger-menu");
+        const navLinks = document.querySelector(".nav-links");
+
+        hamburgerMenu.addEventListener("click", function () {
+          navLinks.classList.toggle("active");
+        });
+      });
     </script>
   </body>
 </html>
